--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,26 +1,26 @@
-<div class="modal">
-  <ion-header-bar>
-    <h1 class="title">Login</h1>
-    <div class="buttons">
-      <button class="button button-clear" ng-click="closeLogin()">Close</button>
-    </div>
-  </ion-header-bar>
-  <ion-content>
-    <form ng-submit="doLogin()">
-      <div class="list">
-        <label class="item item-input">
-          <span class="input-label">Username</span>
-          <input type="text" ng-model="loginData.username">
-        </label>
-        <label class="item item-input">
-          <span class="input-label">Password</span>
-          <input type="password" ng-model="loginData.password">
-        </label>
-        <label class="item">
-          <button class="button button-block button-positive" type="submit">Log in</button>
-        </label>
-      </div>
-    </form>
-  </ion-content>
-</div>
-
+<ion-view title="CarCloud">
+    <ion-content>
+        <div class="logo">
+            <img width=40% src="img/logo-trans.png">
+        </div>
+        <form>
+            <div class="list">
+                <div class="padding">
+                    <label class="item item-input">
+                        <input placeholder="Username" type="text" ng-model="username">
+                    </label>
+                </div>
+                <div class="padding">
+                    <label class="item item-input">
+                        <input placeholder="Password" type="password" ng-model="password">
+                    </label>
+                </div>
+            </div>
+            <div class="padding">
+                <button class="button button-block button-positive" ng-click="login(username, password)">
+                    Log In
+                </button>
+            </div>
+        </form>
+    </ion-content>
+</ion-view>
