--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -20,6 +20,9 @@
                 <ion-item nav-clear menu-close href="#/app/home2">
                     Home
                 </ion-item>
+                <ion-item nav-clear menu-close href="#/logout">
+                    Logout
+                </ion-item>
             </ion-list>
         </ion-content>
     </ion-side-menu>
