--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,10 +1,21 @@
 <ion-view title="CarCloud">
-    <ion-nav-bar class="bar-positive">
-        <ion-nav-buttons side="left">
-            <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-        </ion-nav-buttons>
-    </ion-nav-bar>
-    <ion-content class="has-header">
-
-    </ion-content>
+	<ion-nav-bar class="bar-dark">
+		<ion-nav-buttons side="left">
+			<button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+		</ion-nav-buttons>
+	</ion-nav-bar>
+	<ion-content class="has-header">
+		<ion-list show-delete="false">
+			<ion-item>
+				<ion-delete-button class="ion-minus-circled"></ion-delete-button>
+				Hello, list item!
+				<ion-option-button class="item-energized">
+					<button class="ion-edit button icon button-icon"></button>
+				</ion-option-button>
+				<ion-option-button class="item-delete">
+					<button class="ion-minus-circled button icon button-icon"></button>
+				</ion-option-button>
+			</ion-item>
+		</ion-list>
+	</ion-content>
 </ion-view>
