--- a/src/templates/devices.html
+++ b/src/templates/devices.html
@@ -6,9 +6,9 @@
 	</ion-nav-bar>
 	<ion-content class="has-header">
 		<ion-list show-delete="false">
-			<ion-item>
-				<ion-delete-button class="ion-minus-circled"></ion-delete-button>
-				Hello, list item!
+			<ion-item href="#/app/device/356363050331521">
+				<h2>Dacia Sandero</h2>
+				<p>356363050331521</p>
 				<ion-option-button class="item-energized">
 					<button class="ion-edit button icon button-icon"></button>
 				</ion-option-button>
