disable scroll on sidebar

--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -8,7 +8,7 @@
         <header class="bar bar-header bar-stable">
             <h1 class="title">Menu</h1>
         </header>
-        <ion-content class="has-header">
+        <ion-content class="has-header" scroll="false">
             <ion-list>
 				<ion-item nav-clear menu-close href="#/app/account" class="item item-avatar">
 					<img gravatar-src="'admin@carcloud.ianduffy.ie'">
