add ui for adding device

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -39,3 +39,48 @@ ion-nav-view {
 #signin-button {
     margin-top: 23px;
 }
+
+.float-button {
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  width: 28px;
+  padding: 28px;
+  font-size: 24px;
+  position: fixed;
+  bottom: 20px; /* Adjust to where you want it */
+  right: 20px; /* Adjust to where you want it */
+  z-index: 9999;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.23);
+}
+
+.float-button .height_fix {
+  margin-top: 100%;
+}
+
+.float-button.float-button-positive {
+    background-color: #4a87ee;
+}
+
+.float-button.float-button-positive:active {
+    background: #145fd7;
+}
+
+.float-button .content {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  margin-top: -12px; /* Note, this must be half the font size */
+  color: white;
+}
+
+.modal{
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+}
