--- a/src/templates/devices.html
+++ b/src/templates/devices.html
@@ -18,4 +18,12 @@
 			</ion-item>
 		</ion-list>
 	</ion-content>
+
+	<div class="float-button float-button-positive">
+	  <span class="height-fix">
+	    <a class="content" ng-click="openAddDeviceModal()">
+	      <i class="ion-plus-round"> </i>
+	    </a>
+	  </span>
+	</div>
 </ion-view>
