--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -13,7 +13,7 @@
 				<ion-item nav-clear menu-close href="#/app/account" class="item item-avatar">
 					<img gravatar-src="'admin@carcloud.ianduffy.ie'">
 					<h2>Ian Duffy</h2>
-					<p>admin@carcloud.ianduffy.ie</p>
+					<p>Edit Profile</p>
 				</ion-item>
                 <ion-item nav-clear menu-close href="#/app/home">
                     Home
