--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -15,12 +15,15 @@
 					<h2>Ian Duffy</h2>
 					<p>Edit Profile</p>
 				</ion-item>
-                <ion-item nav-clear menu-close href="#/app/home">
-                    Home
+
+                <ion-item nav-clear menu-close class="item-icon-left" href="#/app/home">
+                    <i class="icon ion-ios7-home"></i>Home
                 </ion-item>
-                <ion-item nav-clear menu-close href="#/logout">
-                    Logout
+
+                <ion-item nav-clear menu-close class="item-icon-left" href="#/logout">
+                    <i class="icon ion-log-out"></i>Logout
                 </ion-item>
+
             </ion-list>
         </ion-content>
     </ion-side-menu>
