--- a/src/templates/account.html
+++ b/src/templates/account.html
@@ -1,10 +1,12 @@
 <ion-view title="Profile">
+
     <ion-nav-bar class="bar-dark">
         <ion-nav-buttons side="left">
             <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
-    <ion-content class="has-header" padding="false">
+
+    <ion-content class="has-header" padding="true">
         <form>
             <div class="list">
                 <label class="item item-input item-stacked-label">
