--- a/src/templates/device.html
+++ b/src/templates/device.html
@@ -1,9 +1,11 @@
-<ion-view title="CarCloud">
+<ion-view title="Device" hide-back-button="false">
+
     <ion-nav-bar class="bar-dark">
-        <ion-nav-buttons side="left">
-            <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-        </ion-nav-buttons>
+        <ion-nav-back-button class="button-clear force-display-inline-block">
+            <i class="ion-ios7-arrow-back"></i>
+        </ion-nav-back-button>
     </ion-nav-bar>
+
     <ion-content class="has-header">
         single device page
     </ion-content>
