--- a/src/templates/devices.html
+++ b/src/templates/devices.html
@@ -1,11 +1,13 @@
 <ion-view title="CarCloud">
+
     <ion-nav-bar class="bar-dark">
         <ion-nav-buttons side="left">
             <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
+
     <ion-content class="has-header">
-        <ion-list show-delete="false">
+        <ion-list show-delete="false" can-swipe="true">
             <ion-item ng-repeat="device in devices" href="#/app/device/{{device.id}}">
                 <h2>{{device.description}}</h2>
 
