--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -5,7 +5,7 @@
         <form ng-submit="login()">
             <div class="ion-list">
                 <label class="item item-input">
-                    <i class="icon ion-ios7-person placeholder-icon"></i>
+                    <i class="icon ion-ios-person placeholder-icon"></i>
                     <input ng-model="form.username" type="text" placeholder="Username">
                 </label>
                 <label class="item item-input">
