--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -19,7 +19,7 @@
                 </ion-item>
 
                 <ion-item nav-clear menu-close class="item-icon-left" href="#/app/home">
-                    <i class="icon ion-ios7-home"></i>Home
+                    <i class="icon ion-ios-home"></i>Home
                 </ion-item>
 
                 <ion-item nav-clear menu-close class="item-icon-left" href="#/logout">
