--- a/src/templates/add-device-modal.html
+++ b/src/templates/add-device-modal.html
@@ -2,7 +2,7 @@
 
     <ion-header-bar align-title="center" class="bar-positive">
         <button class="button button-clear" ng-click="closeAddDeviceModal()">
-            <i class="ion-ios7-arrow-back"></i>
+            <i class="ion-ios-arrow-back"></i>
         </button>
         <h1 class="title">Create a Device</h1>
     </ion-header-bar>
