--- a/src/templates/device.html
+++ b/src/templates/device.html
@@ -2,7 +2,7 @@
 
     <ion-nav-bar class="bar-dark">
         <ion-nav-back-button class="button-clear force-display-inline-block">
-            <i class="ion-ios7-arrow-back"></i>
+            <i class="ion-ios-arrow-back"></i>
         </ion-nav-back-button>
     </ion-nav-bar>
 
