add edit account

--- a/src/templates/add-device-modal.html
+++ b/src/templates/add-device-modal.html
@@ -9,12 +9,10 @@
 
     <ion-content class="has-header" padding="true" scroll="false">
 
-        <form name="form" role="form" novalidate
-              class="ng-scope ng-invalid ng-invalid-required ng-dirty ng-valid-minlength"
-              ng-submit="create(this)">
+        <form name="form" role="form" novalidate ng-submit="create(this)">
 
 
-            <div class="ion-list">
+            <div class="list">
                 <label class="item item-input">
                     <input name="id" ng-model="device.id" type="number" placeholder="ID" required>
                 </label>
