--- a/src/templates/edit-device-modal.html
+++ b/src/templates/edit-device-modal.html
@@ -14,7 +14,7 @@
               ng-submit="update(this)">
 
 
-            <div class="ion-list">
+            <div class="list">
                 <label class="item item-input">
                     <input name="id" ng-model="device.id" type="number" placeholder="ID" disabled>
                 </label>
