--- a/src/templates/account.html
+++ b/src/templates/account.html
@@ -7,25 +7,31 @@
     </ion-nav-bar>
 
     <ion-content class="has-header" padding="true">
-        <form>
+        <form role="form" novalidate ng-submit="update(this)">
+
             <div class="list">
-                <label class="item item-input item-stacked-label">
-                    <span class="input-label">First Name</span>
-                    <input type="text" placeholder="Ian">
+
+                <label class="item item-input">
+                    <span class="input-label">First name</span>
+                    <input name="firstname" ng-model="form.firstName" type="text">
                 </label>
-                <label class="item item-input item-stacked-label">
-                    <span class="input-label">Last Name</span>
-                    <input type="text" placeholder="Duffy">
+
+                <label class="item item-input">
+                    <span class="input-label">Last name</span>
+                    <input name="lastname" ng-model="form.lastName" type="text">
                 </label>
-                <label class="item item-input item-stacked-label">
-                    <span class="input-label">E-mail</span>
-                    <input type="text" placeholder="admin@carcloud.ianduffy.ie">
+
+                <label class="item item-input">
+                    <span class="input-label">Email</span>
+                    <input name="email" ng-model="form.email" type="email">
                 </label>
+
             </div>
 
-            <div class="padding-left padding-right">
-                <button id="save-button" type="save" class="button button-block button-positive">Save</button>
-            </div>
+            <button type="submit" ng-disabled="form.$invalid" class="button button-full button-positive">
+                <span class="ion-checkmark-circled"></span> Save
+            </button>
+
         </form>
 
     </ion-content>
