--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -11,9 +11,9 @@
         <ion-content class="has-header" scroll="false">
             <ion-list>
                 <ion-item nav-clear menu-close href="#/app/account" class="item item-avatar">
-                    <img gravatar-src="'admin@carcloud.ianduffy.ie'">
+                    <img gravatar-src="account.email">
 
-                    <h2>Ian Duffy</h2>
+                    <h2>{{account.firstName}} {{account.lastName}}</h2>
 
                     <p>Edit Profile</p>
                 </ion-item>
