--- a/src/templates/menu.html
+++ b/src/templates/menu.html
@@ -22,6 +22,10 @@
                     <i class="icon ion-ios-home"></i>Home
                 </ion-item>
 
+                <ion-item nav-clear menu-close class="item-icon-left" href="#/app/password">
+                    <i class="icon ion-locked"></i>Change Password
+                </ion-item>
+
                 <ion-item nav-clear menu-close class="item-icon-left" href="#/logout">
                     <i class="icon ion-log-out"></i>Logout
                 </ion-item>
