add device popover

--- a/src/templates/account.html
+++ b/src/templates/account.html
@@ -11,17 +11,17 @@
 
             <div class="list">
 
-                <label class="item item-input">
+                <label class="item item-input item-stacked-label">
                     <span class="input-label">First name</span>
                     <input required name="firstname" ng-model="account.firstName" type="text">
                 </label>
 
-                <label class="item item-input">
+                <label class="item item-input item-stacked-label">
                     <span class="input-label">Last name</span>
                     <input required name="lastname" ng-model="account.lastName" type="text">
                 </label>
 
-                <label class="item item-input">
+                <label class="item item-input item-stacked-label">
                     <span class="input-label">Email</span>
                     <input required name="email" ng-model="account.email" type="email">
                 </label>
