--- a/src/templates/password.html
+++ b/src/templates/password.html
@@ -11,7 +11,7 @@
 
             <div class="list">
 
-                <label class="item item-input">
+                <label class="item item-input item-stacked-label">
                     <span class="input-label">New password</span>
                     <input
                             type="password"
@@ -44,7 +44,7 @@
                 </div>
 
 
-                <label class="item item-input">
+                <label class="item item-input item-stacked-label">
                     <span class="input-label">New password confirmation</span>
                     <input
                             type="password"
