--- a/src/css/style.css
+++ b/src/css/style.css
@@ -97,3 +97,15 @@ ion-nav-view {
     display: inline-block !important;
     opacity: 0.8 !important;
 }
+
+ion-popover-view.fit {
+    height: auto !important;
+}
+
+ion-popover-view.fit ion-content {
+    position: relative !important;
+}
+
+.platform-android ion-popover-view.fit {
+    margin-top: 10px !important;
+}
