--- a/src/templates/device.html
+++ b/src/templates/device.html
@@ -4,6 +4,10 @@
         <ion-nav-back-button class="button-clear force-display-inline-block">
             <i class="ion-ios-arrow-back"></i>
         </ion-nav-back-button>
+        <ion-nav-buttons side="right">
+            <button class="button button-icon ion-more" ng-click="popover.show($event)">
+            </button>
+        </ion-nav-buttons>
     </ion-nav-bar>
 
     <ion-content class="has-header">
