remove can swipe it breaks things

--- a/src/templates/devices.html
+++ b/src/templates/devices.html
@@ -7,7 +7,7 @@
     </ion-nav-bar>
 
     <ion-content class="has-header">
-        <ion-list show-delete="false" can-swipe="true">
+        <ion-list show-delete="false">
             <ion-item ng-repeat="device in devices" href="#/app/device/{{device.id}}">
                 <h2>{{device.description}}</h2>
 
