begin adding the ui around share

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -109,3 +109,15 @@ ion-popover-view.fit ion-content {
 .platform-android ion-popover-view.fit {
     margin-top: 10px !important;
 }
+
+.force-overflow {
+    overflow: visible !important;
+}
+
+.force-remove-bg {
+    background: none !important;
+}
+
+.chosen-container {
+    width: 100% !important;
+}
