--- a/src/templates/add-device-modal.html
+++ b/src/templates/add-device-modal.html
@@ -1,7 +1,7 @@
-<div class="modal">
+<div class="modal" ng-controller="createDeviceCtrl">
 
     <ion-header-bar align-title="center" class="bar-positive">
-        <button class="button button-clear" ng-click="closeAddDeviceModal()">
+        <button class="button button-clear" ng-click="addDeviceModal.hide()">
             <i class="ion-ios-arrow-back"></i>
         </button>
         <h1 class="title">Create a Device</h1>
@@ -36,7 +36,7 @@
 
             </div>
 
-            <button type="button" class="button button-full button-dark" ng-click="closeAddDeviceModal()">
+            <button type="button" class="button button-full button-dark" ng-click="addDeviceModal.hide()">
                 <span class="ion-android-cancel"></span> Cancel
             </button>
 
