--- a/src/templates/devices.html
+++ b/src/templates/devices.html
@@ -29,7 +29,7 @@
 
     <div class="float-button float-button-positive">
 	  <span class="height-fix">
-	    <a class="content" ng-click="openAddDeviceModal()">
+	    <a class="content" ng-click="create()">
             <i class="ion-plus-round"> </i>
         </a>
 	  </span>
