--- a/src/templates/device-popover.html
+++ b/src/templates/device-popover.html
@@ -1,15 +1,15 @@
 <ion-popover-view class="fit">
     <ion-content>
         <div class="list">
-            <a class="item item-icon-left" href="#">
+            <a class="item item-icon-left" ng-click="edit(device.id)">
                 <i class="icon ion-edit energized"></i>
                 Edit
             </a>
-            <a class="item item-icon-left" href="#">
+            <a class="item item-icon-left" ng-click="share(device.id)">
                 <i class="icon ion-share calm"></i>
                 Share
             </a>
-            <a class="item item-icon-left" href="#">
+            <a class="item item-icon-left" ng-click="delete(device.id)">
                 <i class="icon ion-minus-circled assertive"></i>
                 Delete
             </a>
