--- a/src/templates/share-device-modal.html
+++ b/src/templates/share-device-modal.html
@@ -1,7 +1,7 @@
-<div class="modal">
+<div class="modal" ng-controller="shareDeviceCtrl">
 
     <ion-header-bar align-title="center" class="bar-positive">
-        <button class="button button-clear" ng-click="closeShareDeviceModal()">
+        <button class="button button-clear" ng-click="shareDeviceModal.hide()">
             <i class="ion-ios-arrow-back"></i>
         </button>
         <h1 class="title">Share Device</h1>
@@ -11,47 +11,34 @@
 
         <div class="bar bar-header item-input-inset force-overflow">
             <div class="item-input-wrapper force-remove-bg">
-                <!--<i class="icon ion-ios7-search placeholder-icon"></i>-->
-                <!--<input type="search" placeholder="Search">-->
-                <select chosen id="states">
-                    <option value="AK">Alaska</option>
-                    <option value="AZ">Arizona</option>
-                    <option value="AR">Arkansas</option>
-                    <option value="CA">California</option>
-                </select>
 
+                <ui-select ng-model="search.selected"
+                           theme="selectize"
+                           reset-search-input="false"
+                           style="width: 100%">
 
+                    <ui-select-match placeholder="Select a user">{{$select.selected.username}}</ui-select-match>
+                    <ui-select-choices repeat="user in users track by $index"
+                                       refresh="getUsers($select.search)"
+                                       refresh-delay="0">
+
+                        <div ng-bind-html="user.username | highlight: $select.search"></div>
+                    </ui-select-choices>
+                </ui-select>
             </div>
 
-                <button class="button button-positive">
+                <button class="button button-positive" ng-click="addOwner()">
                     Add
                 </button>
         </div>
 
-        <!--<div class="bar bar-header">-->
-
-            <!--<div class="item item-button-right">-->
-                <!--<select chosen id="states">-->
-                    <!--<option value="AK">Alaska</option>-->
-                    <!--<option value="AZ">Arizona</option>-->
-                    <!--<option value="AR">Arkansas</option>-->
-                    <!--<option value="CA">California</option>-->
-                <!--</select>-->
-
-                <!--<button class="button button-positive">-->
-                    <!--Add-->
-                <!--</button>-->
-            <!--</div>-->
-
-        <!--</div>-->
-
         <ion-list show-delete="false">
-            <ion-item ng-repeat="owner in device.owners" href="#/app/device/{{device.id}}">
+            <ion-item ng-repeat="owner in device.owners">
                 <h2>{{owner.firstName}} {{owner.lastName}}</h2>
 
                 <p>{{owner.username}}</p>
 
-                <ion-option-button class="item-delete" ng-click="delete(device.id)">
+                <ion-option-button class="item-delete" ng-click="removeOwner(owner.username)">
                     <button class="ion-minus-circled button icon button-icon"></button>
                 </ion-option-button>
             </ion-item>
