bring in google maps

--- a/src/templates/device.html
+++ b/src/templates/device.html
@@ -1,4 +1,4 @@
-<ion-view title="Device" hide-back-button="false">
+<ion-view title="Device" hide-back-button="false" scroll="false">
 
     <ion-nav-bar class="bar-dark">
         <ion-nav-back-button class="button-clear force-display-inline-block">
@@ -11,6 +11,6 @@
     </ion-nav-bar>
 
     <ion-content class="has-header">
-        single device page
+        <div id="map"></div>
     </ion-content>
 </ion-view>
