--- a/src/css/style.css
+++ b/src/css/style.css
@@ -121,3 +121,12 @@ ion-popover-view.fit ion-content {
 .selectize-input {
     padding: 0 0 2px 8px !important;
 }
+
+#map {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.scroll {
+  height: 100%;
+}
