Get google apps working

--- a/src/templates/device.html
+++ b/src/templates/device.html
@@ -11,6 +11,6 @@
     </ion-nav-bar>
 
     <ion-content class="has-header">
-        <div id="map"></div>
+        <div id="map_canvas"></div>
     </ion-content>
 </ion-view>
