--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,3 @@
-ion-nav-view {
-    background-color: #FFF !important;
-}
-
 ::-webkit-input-placeholder {
     color: #bbb;
 }
@@ -122,11 +118,12 @@ ion-popover-view.fit ion-content {
     padding: 0 0 2px 8px !important;
 }
 
-#map {
+#map_canvas {
   display: block;
   width: 100%;
   height: 100%;
 }
+
 .scroll {
   height: 100%;
 }
