--- a/src/templates/device.html
+++ b/src/templates/device.html
@@ -5,7 +5,7 @@
             <i class="ion-ios-arrow-back"></i>
         </ion-nav-back-button>
         <ion-nav-buttons side="right">
-            <button class="button button-icon ion-more" ng-click="popover.show($event)">
+            <button class="button button-icon ion-more" ng-click="openPopover($event)">
             </button>
         </ion-nav-buttons>
     </ion-nav-bar>
