--- a/src/templates/device.html
+++ b/src/templates/device.html
@@ -1,4 +1,4 @@
-<ion-view title="Device" hide-back-button="false" scroll="false">
+<ion-view title="{{device.description}}" hide-back-button="false" scroll="false">
 
     <ion-nav-bar class="bar-dark">
         <ion-nav-back-button class="button-clear force-display-inline-block">
