--- a/src/templates/device.html
+++ b/src/templates/device.html
@@ -2,7 +2,7 @@
 
     <ion-nav-bar class="bar-dark">
         <ion-nav-back-button class="button-clear force-display-inline-block">
-            <i class="ion-ios-arrow-back"></i>
+            <i class="ion-ios-arrow-back"></i> Back
         </ion-nav-back-button>
         <ion-nav-buttons side="right">
             <button class="button button-icon ion-more" ng-click="openPopover($event)">
