--- a/src/templates/share-device-modal.html
+++ b/src/templates/share-device-modal.html
@@ -10,22 +10,12 @@
     <ion-content class="has-header" padding="false" scroll="false">
 
         <div class="bar bar-header item-input-inset force-overflow">
-            <!--<div class="item-input-wrapper force-remove-bg">-->
+            <div class="item-input-wrapper force-remove-bg">
 
-                <!--<ui-select ng-model="search.selected"-->
-                           <!--theme="selectize"-->
-                           <!--reset-search-input="false"-->
-                           <!--style="width: 100%">-->
-
-                    <!--<ui-select-match placeholder="Select a user">{{$select.selected.username}}</ui-select-match>-->
-                    <!--<ui-select-choices repeat="user in users track by $index"-->
-                                       <!--refresh="getUsers($select.search)"-->
-                                       <!--refresh-delay="0">-->
-
-                        <!--<div ng-bind-html="user.username | highlight: $select.search"></div>-->
-                    <!--</ui-select-choices>-->
-                <!--</ui-select>-->
-            <!--</div>-->
+            <input type="text" ng-model="searched.usernameSelected" placeholder="Add new owner"
+                   typeahead="user.username for user in getUsers($viewValue)"
+                   typeahead-wait-ms="200">
+            </div>
 
                 <button class="button button-positive" ng-click="addOwner()">
                     Add
