--- a/src/templates/account.html
+++ b/src/templates/account.html
@@ -13,7 +13,8 @@
 
                 <label class="item item-input item-stacked-label">
                     <span class="input-label">First name</span>
-                    <input ng-minlength=1 ng-maxlength=50 required maxlength="50" name="firstName" ng-model="account.firstName" type="text">
+                    <input ng-minlength=1 ng-maxlength=50 required maxlength="50" name="firstName"
+                           ng-model="account.firstName" type="text">
                 </label>
 
                 <div class="error" ng-cloak
