--- a/src/templates/device.html
+++ b/src/templates/device.html
@@ -2,7 +2,7 @@
 
     <ion-nav-bar class="bar-dark">
         <ion-nav-back-button class="button-clear force-display-inline-block">
-            <i class="ion-ios-arrow-back"></i> Back
+            <i class="ion-ios-arrow-back"></i>
         </ion-nav-back-button>
         <ion-nav-buttons side="right">
             <button class="button button-icon ion-more" ng-click="openPopover($event)">
@@ -12,13 +12,13 @@
 
 
     <ion-header-bar class="bar bar-subheader item-input-inset">
-      <label class="item-input-wrapper force-remove-bg">
-        <input type="date" name="start" ng-model="fromDate" required placeholder="Start Date">
-      </label>
-      <label class="item-input-wrapper force-remove-bg">
-        <input type="date" name="end" ng-model="toDate" required placeholder="End Date"/>
-      </label>
-      <button ng-click="onChangeDate()" class="button button-light icon ion-ios-paperplane">
+        <label class="item-input-wrapper force-remove-bg">
+            <input type="date" name="start" ng-model="fromDate" required placeholder="Start Date">
+        </label>
+        <label class="item-input-wrapper force-remove-bg">
+            <input type="date" name="end" ng-model="toDate" required placeholder="End Date"/>
+        </label>
+        <button ng-click="onChangeDate()" class="button button-light icon ion-ios-paperplane">
     </ion-header-bar>
 
     <ion-content class="has-header has-subheader">
